# PacmanGame

./: CMakeLists.txt  README.md  pacman
levels/: level1.txt  level2.txt  level3.txt  level4.txt
pacman.dSYM/Contents/Resources/DWARF/: pacman
pacman.dSYM/Contents/Resources/Relocations/aarch64/: pacman.yml
src/: main  main.c
